--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.12",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.4.2",
     "jest": "^29.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "^2.1.3",
+    "react-test-renderer": "^18.2.0",
+    "styled-components": "^5.3.6",
     "ts-jest": "^29.0.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +44,14 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.12",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "enzyme": "^3.11.0",
+    "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
